--- a/src/templates/post/show.html.twig
+++ b/src/templates/post/show.html.twig
@@ -46,17 +46,26 @@
 
                 <div id="carouselControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
+                    {% for image in post.images %}
+
+                    {# {{dump(post.images)}} #}
+
+                    {# {% if ()%} #}
+
                         <div class="carousel-item active">
                             {# <img class="d-block w-100" src={{post.images.link}} alt="Photo" > #}
-                            <img class="d-block w-100" src={{ post.images }} alt="Photo">
+                            <img class="d-block w-100" src={{image}} alt="Photo">
                         </div>
 
+                        {# {{dump(post.images)}} #}
+
                         {# <div class="carousel-item">
-                            <img class="d-block w-100" src="https://images.unsplash.com/photo-1665512423024-e7ecdc67840a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Photo">
-                        </div>
-                        <div class="carousel-item">
+                            <img class="d-block w-100" src={{image}} alt="Photo">
+                        </div> #}
+                        {# <div class="carousel-item">
                             <img class="d-block w-100" src="https://images.unsplash.com/photo-1665516533754-d98825ae07e6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDMxfFJfRnluLUd3dGx3fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="Photo">
                         </div> #}
+                    {% endfor %}
                     </div>
                     <a class="carousel-control-prev" href="#carouselControls" role="button" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
