--- a/src/templates/post/index.html.twig
+++ b/src/templates/post/index.html.twig
@@ -14,11 +14,14 @@
 
         <div class="col-3 m-3 p-3">
 
+            
             <div class="card">
 
                 <a href="{{ path('app_post_show', {'id': post.id}) }}">
-                
-                    <img class="card-img-top" src="https://images.unsplash.com/photo-1665512423024-e7ecdc67840a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Photo">
+
+                    {% for image in post.images %}
+                    <img class="card-img-top" src={{image}} alt="Photo">
+                    {% endfor %}
 
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">{{ post.name }}</h5>
@@ -26,9 +29,11 @@
                         <span class="align-self-end">{{ post.price }}€</span>
                     </div>
 
+
                 </a>
 
             </div>
+            
 
             <span class="date">Date de publication : {{ post.date ? post.date|date('d/m/Y') : '' }}</span>
 
