--- a/src/templates/post/_form.html.twig
+++ b/src/templates/post/_form.html.twig
@@ -6,7 +6,8 @@
     {{ form_row(form.name, {'label': 'Titre'}) }}
     {{ form_row(form.price, {'label': 'Prix'}) }}
     {{ form_row(form.images, {'label': 'Ajouter une ou plusieurs photo(s)'}) }}
-    {{ form_row(form.categories, {'label': 'Catégorie'}) }}
+    {# {{ form_row(form.categories, {'label': 'Catégorie'}) }} #}
+    {{ form_row(form.category, {'label': 'Catégorie'}) }}
     {{ form_row(form.description) }}
     <button class="btn btn-outline-primary">{{ button_label|default('Créer une annonce') }}</button>
 {{ form_end(form) }}
