--- a/src/templates/post/index.html.twig
+++ b/src/templates/post/index.html.twig
@@ -13,19 +13,25 @@
         {% for post in posts %}
 
         <div class="col-3 m-3 p-3">
-
             
             <div class="card">
 
                 <a href="{{ path('app_post_show', {'id': post.id}) }}">
-
-                    {% for image in post.images %}
-                    <img class="card-img-top" src={{image}} alt="Photo">
-                    {% endfor %}
+                <div id="carouselControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        {% for image in post.images %}
+                        {# {{dump(post.images)}} #}
+                        {# {%if (post.images.snapshot)%} #}
+                            <div class="carousel-item active">
+                                <img class="card-img-top" src={{image}} alt="Photo">
+                            </div>
+                        {% endfor %}
+                        </div>
+                    </div>
 
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">{{ post.name }}</h5>
-                        <p class="card-text">Adresse.</p>
+                        <p class="card-text">{{ post.category }}</p>
                         <span class="align-self-end">{{ post.price }}€</span>
                     </div>
 
@@ -49,11 +55,6 @@
 
     </div>
 
-    {# {% if %}
-
-    {% else %}
-
-    {% endif %} #}
 
     <div class="row d-flex justify-content-end">
 
@@ -65,39 +66,5 @@
 
     </div>
 
-    
-
-
-    {# <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Price</th>
-                <th>Date</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for post in posts %}
-            <tr>
-                <td>{{ post.id }}</td>
-                <td>{{ post.name }}</td>
-                <td>{{ post.description }}</td>
-                <td>{{ post.price }}</td>
-                <td>{{ post.date ? post.date|date('Y-m-d') : '' }}</td>
-                <td>
-                    <a href="{{ path('app_post_show', {'id': post.id}) }}">show</a>
-                    <a href="{{ path('app_post_edit', {'id': post.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table> #}
-
+<script src="{{ asset('assets/js/post.js') }}"></script>
 {% endblock %}
