--- a/src/templates/post/index.html.twig
+++ b/src/templates/post/index.html.twig
@@ -1,21 +1,12 @@
 {% extends 'base.html.twig' %}
-
 {% block title %}Post index{% endblock %}
-
 {% block body %}
-
     <link href="{{ asset('assets/css/post.css') }}" rel="stylesheet"/>
-
     <h1>Post index</h1>
-
     <div class="row justify-content-around">
-
         {% for post in posts %}
-
         <div class="col-3 m-3 p-3">
-            
             <div class="card">
-
                 <a href="{{ path('app_post_show', {'id': post.id}) }}">
                 <div id="carouselControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -34,36 +25,23 @@
                         <p class="card-text">{{ post.category }}</p>
                         <span class="align-self-end">{{ post.price }}€</span>
                     </div>
-
-
                 </a>
-
             </div>
-            
-
             <span class="date">Date de publication : {{ post.date ? post.date|date('d/m/Y') : '' }}</span>
-
         </div>
         
-
-
         {% else %}
-
             <span>Aucune annonce n'a été trouvée</span>
-
         {% endfor %}
-
     </div>
-
+    {# {% if %}
+    {% else %}
+    {% endif %} #}
 
     <div class="row d-flex justify-content-end">
-
         <div class="col-auto">
-
             <a href="{{ path('app_post_new') }}" class="btn btn-outline-primary">Ajouter une annonce</a>
-
         </div>
-
     </div>
 
 <script src="{{ asset('assets/js/post.js') }}"></script>
