--- a/src/public/assets/css/home.css
+++ b/src/public/assets/css/home.css
@@ -1,30 +1,66 @@
-p{
-    position: absolute;
-    width: 894px;
-    height: 48px;
-    left: 270px;
-    top: 144px;
-
-    font-family: Verdana (sans-serif);
+*{
+    /* font-family: 'Inter'; */
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
     line-height: 24px;
-    text-align: center;
+}
 
+/* body{
+    background-color: orange;
+} */
+p{
+    /* position: absolute; */
+    /* width: 894px; */
+    /* height: 48px; */
+    left: 290px;
+    top: 164px;
+    margin-bottom: 150px;
+    margin-left: 100px;
+    margin-right: 100px ;
+    /* background-color: #6B77E9; */
+    padding-top: 100px ;
+    padding-bottom: 100px;
+    /* font-family: Verdana (sans-serif);
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px; */
+    /* text-align: center; */
+    color: #3D3D3E; 
+}
+
+h4{
+    position: absolute;
+    width: 894px;
+    height: 48px;
+    left: 270px;
+    top: 144px; 
+
+    text-align: center;
     color: #3D3D3E;
 }
 .rectangle{
-    box-sizing: border-box;
+    /* box-sizing: border-box;
     position: absolute;
-    width: 1086.92px;
-    height: 271px;
-    left: 180px;
-    top: 257px;
+    width: 600px;
+    height: 200px; */
+    /* left: 180px;
+    top: 350px; */
     background: #6B77E9;
     border: 1px solid #7C7C7C;
     box-shadow: 1px 3px 15px rgba(32, 31, 31, 0.25);
-    border-radius: 20px;
+    border-radius: 20px; 
+    /* display: block; */
+    /* margin-left: auto;
+    margin-right: auto; */
+
+    width:600px;
+    height:300px;
+    position:absolute;
+    top:70%;
+    left:50%;
+    transform:translate(-50%,-50%);
 }
 
 .dropbtn {
@@ -50,6 +86,11 @@ p{
 .dropdown {
     position: relative;
     display: inline-block;
+    top:50px; 
+    left:50px;
+    right: 50px;
+    bottom: 50px;
+    /* transform:translate(-50%,-50%) */
 }
   
 /* Dropdown Content (Hidden by Default) */
