--- a/src/templates/post/index.html.twig
+++ b/src/templates/post/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}Post index{% endblock %}
 {% block body %}
-    <link href="{{ asset('assets/css/post.css') }}" rel="stylesheet"/>
+    <link href="{{ asset('assets/css/postI.css') }}" rel="stylesheet"/>
     <h1>Post index</h1>
     <div class="row justify-content-around">
         {% for post in posts %}
@@ -38,11 +38,11 @@
     {% else %}
     {% endif %} #}
 
-    <div class="row d-flex justify-content-end">
+    {# <div class="row d-flex justify-content-end">
         <div class="col-auto">
             <a href="{{ path('app_post_new') }}" class="btn btn-outline-primary">Ajouter une annonce</a>
         </div>
-    </div>
+    </div> #}
 
-<script src="{{ asset('assets/js/post.js') }}"></script>
+    <script src="{{ asset('assets/js/post.js') }}"></script>
 {% endblock %}
