Update home page route and css

--- a/src/templates/home/index.html.twig
+++ b/src/templates/home/index.html.twig
@@ -4,10 +4,6 @@
 {% block body %}
 <link href="{{ asset('assets/css/home.css') }}" rel="stylesheet"/>
 
-{# <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style> #}
 
 <div class="example-wrapper">
     <p>Devenez acteurs d'une consommation  raisonnée  <br>
@@ -15,7 +11,7 @@
         encore réparation... 
     </p>
 
-    <div class="rectangle">
+    <div class="searchtable">
         <div class="dropdown">
             <button class="dropbtn">Catégorie</button>
             <div class="dropdown-content">
@@ -32,11 +28,6 @@
                 <a href="#">> 200</a>
             </div>
         </div>
-        {# <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-1" type="search" placeholder="Recherche..." aria-label="Search">
-            <button type="submit">🔍</button> 
-            class="btn btn-outline-success my-2 my-sm-0"
-        </form> #}
     </div>
 </div>
 {% endblock %}
