--- a/src/public/assets/css/home.css
+++ b/src/public/assets/css/home.css
@@ -40,21 +40,11 @@ h4{
     text-align: center;
     color: #3D3D3E;
 }
-.rectangle{
-    /* box-sizing: border-box;
-    position: absolute;
-    width: 600px;
-    height: 200px; */
-    /* left: 180px;
-    top: 350px; */
+.searchtable{
     background: #6B77E9;
     border: 1px solid #7C7C7C;
     box-shadow: 1px 3px 15px rgba(32, 31, 31, 0.25);
     border-radius: 20px; 
-    /* display: block; */
-    /* margin-left: auto;
-    margin-right: auto; */
-
     width:600px;
     height:300px;
     position:absolute;
@@ -64,25 +54,18 @@ h4{
 }
 
 .dropbtn {
-    /* background-color: #4CAF50; */
     color:  #7C7C7C;
     padding: 16px;
     font-size: 16px;
-    /* border: none; */
-
     box-sizing: border-box;
-    /* position: absolute; */
     width: 220.4px;
     height: 63.73px;
-    /* left: 224.28px;
-    top: 326px; */
     background: #FFFFFF;
     border: 1px solid #7C7C7C;
     border-radius: 10px;
     cursor: pointer;
 }
   
-/* The container <div> - needed to position the dropdown content */
 .dropdown {
     position: relative;
     display: inline-block;
@@ -90,10 +73,8 @@ h4{
     left:50px;
     right: 50px;
     bottom: 50px;
-    /* transform:translate(-50%,-50%) */
 }
   
-/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
     display: none;
     position: absolute;
@@ -104,7 +85,6 @@ h4{
     border-radius: 10px;
 }
   
-/* Links inside the dropdown */
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
@@ -115,17 +95,13 @@ h4{
     border-radius: 10px;
 }
   
-/* Change color of dropdown links on hover */
 .dropdown-content a:hover {background-color: #f1f1f1}
-  
-/* Show the dropdown menu on hover */
+
 .dropdown:hover .dropdown-content {
     display: block;
 }
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-    /* background-color:  #7C7C7C; */
     background: #FFFFFF;
     border: 1px solid #7C7C7C;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -133,7 +109,6 @@ h4{
 }
 
 button{
-    /* background-color:  #7C7C7C; */
     background: #FFFFFF;
     border: 1px solid #7C7C7C;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
