--- a/src/public/assets/css/post.css
+++ b/src/public/assets/css/post.css
@@ -1,6 +1,16 @@
+*{
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+}
+
 h1{
-    color: #e82412; 
-    background-color: blue;
+    margin-left: 100px;
+    margin-right: 100px ;
+    padding-top: 100px ;
+    padding-bottom: 100px;
+    color: #3D3D3E; 
 }
 
 a {
