--- a/src/templates/post/index.html.twig
+++ b/src/templates/post/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}Post index{% endblock %}
 {% block body %}
-    <link href="{{ asset('assets/css/postI.css') }}" rel="stylesheet"/>
+    <link href="{{ asset('assets/css/post.css') }}" rel="stylesheet"/>
     <h1>Post index</h1>
     <div class="row justify-content-around">
         {% for post in posts %}
