Update edit post css

--- a/src/templates/post/edit.html.twig
+++ b/src/templates/post/edit.html.twig
@@ -11,7 +11,7 @@
             
     </div>
 
-    <a href="{{ path('app_post_index') }}" class="retour">&#8592 Retour</a>
+    {# <a href="{{ path('app_post_index') }}" class="retour">&#8592 Retour</a> #}
 
     {{ include('post/_delete_form.html.twig') }}
 {% endblock %}
