--- a/src/templates/base.html.twig
+++ b/src/templates/base.html.twig
@@ -42,7 +42,7 @@
         <div class="footer_bg">
             <footer class="bg-dark text-center text-white">
                 <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                    © 2022 Copyright:<a class="text-white" href="">🧺LeBonCoinDuPauvre</a>
+                    © 2022 Copyright:<a class="text-white" href="{{ path('app_home') }}">🧺LeBonCoinDuPauvre</a>
                 </div>
             </footer>
         </div>
