--- a/src/templates/post/new.html.twig
+++ b/src/templates/post/new.html.twig
@@ -16,5 +16,5 @@
             
     </div>
 
-    <a href="{{ path('app_post_index') }}" class="retour">&#8592 Retour</a>
+    {# <a href="{{ path('app_post_index') }}" class="retour">&#8592 Retour</a> #}
 {% endblock %}
