--- a/src/templates/security/login.html.twig
+++ b/src/templates/security/login.html.twig
@@ -6,14 +6,14 @@
 <section class="container my-3">
     <div class="row">
         <div class="col">
-            <form method="post ">
+            <form method="post">
                 {% if error %}
                 <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                 {% endif %}
 
                 {% if app.user %}
                 <div class="mb-3">
-                    You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+                    You are logged in as {{ app.user.firstname }}, <a href="{{ path('app_logout') }}">Logout</a>
                 </div>
                 {% endif %}
 
