--- a/src/templates/post/_form.html.twig
+++ b/src/templates/post/_form.html.twig
@@ -1,13 +1,38 @@
 {% form_theme form 'bootstrap_5_layout.html.twig' %}
 
 {{ form_start(form, {'attr': {'class': 'd-flex flex-column justify-content-center ml-auto mr-auto'}}) }}
-    {# {{ form_widget(form) }} #}
-    {# {{ form_row(form.name) }} #}
     {{ form_row(form.name, {'label': 'Titre'}) }}
     {{ form_row(form.price, {'label': 'Prix'}) }}
+    <div id="Hello">
     {{ form_row(form.images, {'label': 'Ajouter une ou plusieurs photo(s)'}) }}
-    {# {{ form_row(form.categories, {'label': 'Catégorie'}) }} #}
+    </div>
+    <button type="button" class="btn btn-outline-dark col-2 d-flex justify-content-center align-self-center" onclick="myFunction()">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+        </svg>
+    </button>
+    {# {{ form_row(form.button) }} #}
     {{ form_row(form.category, {'label': 'Catégorie'}) }}
     {{ form_row(form.description) }}
     <button class="btn btn-outline-primary">{{ button_label|default('Créer une annonce') }}</button>
 {{ form_end(form) }}
+
+<script>
+function myFunction() {
+  let test = document.createElement("input");
+
+    test.setAttribute("type", "file");
+
+    test.setAttribute("name", "post[images][]");
+
+    //test.setAttribute("multiple", "multiple");
+
+    test.setAttribute("class", "form-control");
+
+    console.log(test)
+
+    console.log(document.getElementById("post_images"))
+
+    document.getElementById("Hello").appendChild(test);
+}
+</script>
