[Feat] Add submit confirm :
* Add submit confirm

* Add welcome message to nav

--- a/src/templates/admin/users/_form.html.twig
+++ b/src/templates/admin/users/_form.html.twig
@@ -8,5 +8,5 @@
     {# {{ form_row(form.email) }} #}
 
 
-    <button class="btn btn-outline-primary">{{ button_label|default('Créer une annonce') }}</button>
+    <button class="btn btn-outline-primary">{{ button_label|default('Modifier l\'utilisateur') }}</button>
 {{ form_end(form) }}
