--- a/src/templates/admin/index.html.twig
+++ b/src/templates/admin/index.html.twig
@@ -1,13 +1,10 @@
 {% extends 'base.html.twig' %}
-
 {% block title %}Users list{% endblock %}
 
 {% block body %}
 
+
 <div class="container">
-    <div class="mb-3">
-        You are logged in as {{ app.user.firstname }}, <a href="{{ path('app_logout') }}">Logout</a>
-    </div>
 
     <h2>User list : (CRUD)</h2>
 
@@ -21,8 +18,6 @@
     <table class="table">
         <thead>
             <tr>
-
-
                 <th scope="col">Name</th>
                 <th scope="col">Email</th>
 
@@ -51,7 +46,7 @@
                     <a href="{{path('user_edit', { id: user.id })}}" class="btn btn-info">Modifier</a>
                 </td>
                 <td>
-                    <a href="{{path('user_delete', { id: user.id })}}" class="btn btn-danger">Supprimer</a>
+                    <a href="{{path('user_delete', { id: user.id })}}" data-action="submit-confirm" class="btn btn-danger">Supprimer</a>
                 </td>
 
             </tr>
@@ -70,15 +65,7 @@
 
     </table>
 
-    <!-- {% for user in users %}
-
-    {{ user.firstname}}
-    {{user.lastname}}
-
-
-
-    {% endfor %} -->
-
+<script src="{{ asset('assets/js/submit-confirm.js') }}"></script>
 </div>
 
 {% endblock %}
