--- a/src/templates/admin/users/edit.html.twig
+++ b/src/templates/admin/users/edit.html.twig
@@ -6,7 +6,7 @@
 <h1>Edit User</h1>
 <section class="container">
     <div class="row">
-        <h1>Inscription</h1>
+        <h1>Modifier un utilisateur</h1>
         <div class="col">
             {{ include('admin/users/_form.html.twig', {'button_label': 'Modifier'}) }}
         </div>
