--- a/src/templates/post/formulaire.html.twig
+++ b/src/templates/post/formulaire.html.twig
@@ -6,8 +6,11 @@
 
 <div class="row">
     <div class="col-md-3">
-        {{ form(form) }}
-        {{ post}}
+        {{ form_start(form) }}
+        {{ form_widget(form) }}
+        <button class="btn btn-success"> Ajouter un commentaire</button>
+            {{ form_end(form) }}
+        {# {{ post}} #}
     </div>
 </div>
 
