--- a/src/templates/post/show.html.twig
+++ b/src/templates/post/show.html.twig
@@ -72,7 +72,6 @@
         <div class="col-auto">
 
             <a href="{{ path('app_post_edit', {'id': post.id}) }}"  class="btn btn-outline-primary">Modifier</a>
-
         </div>
 
         <div class="col-auto">
@@ -82,11 +81,11 @@
         </div>
 
         {# Poser une question #}
-        {# <div class="row">
+        <div class="row">
             <div class="col-md-3">
                 {{ form(form) }}
             </div>
-        </div> #}
+        </div>
         
     </div>
 
