Update question part

--- a/src/templates/post/show.html.twig
+++ b/src/templates/post/show.html.twig
@@ -92,7 +92,7 @@
                     <div class="card" style="width: 18rem;">
                         {# <img class="card-img-top" src="..." alt="Card image cap"> #}
                         <div class="card-body">
-                            <h5 class="card-title">{{question.userId}}</h5>
+                            <h5 class="card-title">{{question.userId.firstname}}</h5>
                             <h6 class="card-subtitle mb-2 text-muted">{{ question.date | date("d/m/Y")}}</h6>
                             <p class="card-text">{{question.questionText}}</p>
                             {# <a href="#" class="btn btn-primary">Go somewhere</a> #}
