--- a/src/templates/base.html.twig
+++ b/src/templates/base.html.twig
@@ -85,6 +85,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_register') }}">Inscription</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Bienvenue {{ app.user.firstname }}</a>
+                    </li>
                 </ul>
 
                 {% if app.user %}
