--- a/src/templates/home/index.html.twig
+++ b/src/templates/home/index.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{# {% extends 'post/show.html.twig' %} #}
 
 {% block title %}{% endblock %}
 {% block body %}
@@ -28,5 +29,7 @@
             </div>
         </div>
     </div>
+
+    {# {{ include('post/show.html.twig') }} #}
 </div>
 {% endblock %}
