update edit & delete post

--- a/src/templates/post/show.html.twig
+++ b/src/templates/post/show.html.twig
@@ -6,32 +6,7 @@
 
     <link href="{{ asset('assets/css/post.css') }}" rel="stylesheet"/>
 
-    <h1>Post</h1>
-
-    {# <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ post.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ post.name }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ post.description }}</td>
-            </tr>
-            <tr>
-                <th>Price</th>
-                <td>{{ post.price }}</td>
-            </tr>
-            <tr>
-                <th>Date</th>
-                <td>{{ post.date ? post.date|date('Y-m-d') : '' }}</td>
-            </tr>
-        </tbody>
-    </table> #}
+    <h1>Annonce</h1>
 
     <div class="row mb-3">
 
