--- a/src/templates/post/show.html.twig
+++ b/src/templates/post/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Post{% endblock %}
+{% block title %}Annonce{% endblock %}
 
 {% block body %}
 
@@ -23,8 +23,10 @@
                     <div class="carousel-inner">
                     {% for image in post.images %}
 
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src={{image}} alt="Photo">
+                        <div class="carousel-item taille">
+                            <div class="d-flex justify-content-center align-items-center">
+                                <img class="d-block" src={{image}} alt="Photo">
+                            </div>
                         </div>
 
                     {% endfor %}
@@ -32,11 +34,9 @@
                     
                     <a class="carousel-control-prev" href="#carouselControls" role="button" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
                     </a>
                     <a class="carousel-control-next" href="#carouselControls" role="button" data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
                     </a>
                 </div>
             
@@ -69,7 +69,7 @@
         
     </div>
 
-    <div class="row justify-content-end mt-3">
+    <div class="row justify-content-end mt-3 mb-5">
 
         <div class="col-auto">
 
