--- a/src/templates/home/index.html.twig
+++ b/src/templates/home/index.html.twig
@@ -2,8 +2,7 @@
 
 {% block title %}{% endblock %}
 {% block body %}
-<link href="{{ asset('assets/css/home.css') }}" rel="stylesheet"/>
-
+<div class="coco">  MAMA</div>
 
 <div class="example-wrapper">
     <p>Devenez acteurs d'une consommation  raisonnée  <br>
