--- a/src/templates/post/show.html.twig
+++ b/src/templates/post/show.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <link href="{{ asset('assets/css/post.css') }}" rel="stylesheet"/>
+    {# <link href="{{ asset('assets/css/post.css') }}" rel="stylesheet"/> #}
 
     <h1>Annonce</h1>
 
