--- a/src/public/assets/css/home.css
+++ b/src/public/assets/css/home.css
@@ -114,3 +114,10 @@ button{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
 }
+
+
+.coco {
+    background-color: #e3e96b;
+    height: 80px;
+    width: 200px;
+}
