--- a/src/templates/base.html.twig
+++ b/src/templates/base.html.twig
@@ -1,9 +1,38 @@
-<!DOCTYPE html>
+{# <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="UTF-8">
+        <title>{% block title %}Welcome!{% endblock %}</title>
+        {# <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>🧺</text></svg>"> #}
+        {# <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" /> #}
+        {# <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script> #}
+        <link href="{{ asset('assets/css/index.css') }}" rel="stylesheet"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="{{ asset('assets/css/home.css') }}" rel="stylesheet"/>
+        <link href="{{ asset('assets/css/post.css') }}" rel="stylesheet"/>
+        <link href="{{ asset('assets/css/styles.css') }}" rel="stylesheet"/>
+        <link href="{{ asset('assets/css/post.css') }}" rel="stylesheet"/>
+
+        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        {# {% block stylesheets %}
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        {% endblock %} #}
+    </head>
+
+{# 
+
+{% include "header_footer/header.html.twig" %}
+<div class="main-container">
+    {% block body %}{% endblock %} 
+</div>
+{% block javascripts %}{% endblock %}
+{% include "header_footer/footer.html.twig" %}
+</body>
+     #}
 
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    {# <title>{% block title %}Welcome!{% endblock %}</title> #}
     {#
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>🧺</text></svg>">
@@ -16,6 +45,19 @@
     <link href="{{ asset('assets/css/index.css') }}" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+
+
+
+
+        <link href="{{ asset('assets/css/index.css') }}" rel="stylesheet"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="{{ asset('assets/css/home.css') }}" rel="stylesheet"/>
+        <link href="{{ asset('assets/css/post.css') }}" rel="stylesheet"/>
+        <link href="{{ asset('assets/css/styles.css') }}" rel="stylesheet"/>
+        <link href="{{ asset('assets/css/post.css') }}" rel="stylesheet"/>
+
+
+
     {% block stylesheets %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
