Init Answer Part

--- a/src/templates/post/show.html.twig
+++ b/src/templates/post/show.html.twig
@@ -82,7 +82,8 @@
 
         {# Poser une question #}
         <div class="row">
-            <div class="col-md-3">
+            {# <div class="col-md-3"> #}
+            <div class="col-md-3" id="ajout-commentaire">
                 {{ form(form) }}
             </div>
 
@@ -95,6 +96,8 @@
                             <h5 class="card-title">{{question.userId.firstname}}</h5>
                             <h6 class="card-subtitle mb-2 text-muted">{{ question.date | date("d/m/Y")}}</h6>
                             <p class="card-text">{{question.questionText}}</p>
+                            {# test #}
+                            <p><a href="#ajout-commentaire" data-reply data-id="{{question.id}}" class="btn btn-secondary">Répondre</a></p>
                             {# <a href="#" class="btn btn-primary">Go somewhere</a> #}
                         </div>
                     </div>
@@ -106,4 +109,17 @@
 
 <script src="{{ asset('assets/js/post.js') }}"></script>
 {% endblock %}
+
+{% block javascripts %}
+    <script>
+        window.onload = () => {
+            document.querySelectorAll("[data-reply]").forEach(element => {
+                element.addEventListener("click", function(){
+                    console.log(this);
+                });
+            })
+        }
+    </script>
+{% endblock %}
+{# document.querySelector("#comments_parentid").value = this.dataset.id; #}
 
