--- a/src/templates/post/new.html.twig
+++ b/src/templates/post/new.html.twig
@@ -1,14 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Post{% endblock %}
+{% block title %}Nouvelle annonce{% endblock %}
 
 {% block body %}
 
     <link href="{{ asset('assets/css/post.css') }}" rel="stylesheet"/>
 
-    <h1>Create new Post</h1>
-
-    <h2>Déposer une annonce</h2>
+    <h1>Déposer une annonce</h1>
 
     <div class="d-flex justify-content-center">
 
