--- a/src/public/assets/css/post.css
+++ b/src/public/assets/css/post.css
@@ -9,7 +9,7 @@ h1{
     margin-left: 100px;
     margin-right: 100px ;
     padding-top: 100px ;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
     color: #3D3D3E; 
 }
 
@@ -19,12 +19,25 @@ a {
 }
 
 /* INDEX */
+img{
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.hauteur {
+    height: 30vh;
+}
+
 .date {
     font-size: 0.75em;
     font-style: italic;
 }
 
 /* SHOW */
+
+.hauteur2 {
+    height: 50vh;
+}
 
 .retour {
     color: #6B77E9;
