--- a/src/templates/post/edit.html.twig
+++ b/src/templates/post/edit.html.twig
@@ -1,17 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Post{% endblock %}
+{% block title %}Modifier une annoncet{% endblock %}
 
 {% block body %}
-    <h1>Edit Post</h1>
+    <h1>Modifier une annonce</h1>
 
     <div class="d-flex justify-content-center">
 
         {{ include('post/_form.html.twig', {'button_label': 'Modifier'}) }}
             
     </div>
-
-    {# <a href="{{ path('app_post_index') }}" class="retour">&#8592 Retour</a> #}
 
     {{ include('post/_delete_form.html.twig') }}
 {% endblock %}
