--- a/src/templates/post/index.html.twig
+++ b/src/templates/post/index.html.twig
@@ -1,9 +1,25 @@
 {% extends 'base.html.twig' %}
-{% block title %}Post index{% endblock %}
+{% block title %}Liste des annonces{% endblock %}
 {% block body %}
     <link href="{{ asset('assets/css/post.css') }}" rel="stylesheet"/>
-    <h1>Post index</h1>
+    <h1>Liste des annonces</h1>
+        {# {% for post in posts %}
+        <div class="col-3 m-3 p-3">
+            <div class="card">
+                <a href="{{ path('app_post_show', {'id': post.id}) }}">
+                <div id="carouselControls" class="carousel-index" data-bs-ride="carousel">
+
+                    <div class="carousel-inner">
+                        {% for image in post.images %}
+                            <div class="carousel-item active hauteur">
+                                 <img class="card-img-top" src={{image}} alt="Photo">
+                            </div>
+
+        {% endfor %} #}
 {{ form(form_search)}}
+
+</div>
+
 {% for fail in app.flashes('failed') %}
     {{ fail }}
 {% endfor %}
@@ -18,9 +34,15 @@
         <div class="col-3 m-3 p-3">
                 <div class="card">
                     <a href="{{ path('app_post_show', {'id': post.id}) }}">
-                        {% for image in post.images %}
-                        <img class="card-img-top" src={{image}} alt="Photo">
-                        {% endfor %}
+                        <div id="carouselControls" class="carousel-index" data-bs-ride="false" data-bs-interval="false">
+                            <div class="carousel-inner">
+                                {% for image in post.images %}
+                                <div class="carousel-item active hauteur">
+                                    <img class="card-img-top" src={{image}} alt="Photo">
+                                </div>
+                                {% endfor %}
+                            </div>
+                        </div>
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">{{ post.name }}</h5>
                             <p class="card-text">Adresse.</p>
@@ -30,16 +52,26 @@
                 </div>
                 <span class="date">Date de publication : {{ post.date ? post.date|date('d/m/Y') : '' }}</span>
         </div>      
-        {% else %}
+    {% else %}
+        <span>Aucune annonce n'a été trouvée</span>
+    {% endfor %}
+
+    </div>
 
             <div class="row justify-content-around">
             {% for post in posts %}
                 <div class="col-3 m-3 p-3">
                     <div class="card">
                         <a href="{{ path('app_post_show', {'id': post.id}) }}">
-                            {% for image in post.images %}
-                            <img class="card-img-top" src={{image}} alt="Photo">
-                            {% endfor %}
+                            <div id="carouselControls" class="carousel-index" data-bs-ride="false" data-bs-interval="false">
+                                <div class="carousel-inner">
+                                    {% for image in post.images %}
+                                    <div class="carousel-item active hauteur">
+                                        <img class="card-img-top" src={{image}} alt="Photo">
+                                    </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">{{ post.name }}</h5>
                                 <p class="card-text">Adresse.</p>
@@ -53,12 +85,7 @@
                     <span>Aucune annonce n'a été trouvée</span>
                 {% endfor %}
             </div>
-        {% endfor %}
 </div>
-
-
-
-
 
     <div class="row d-flex justify-content-end">
         <div class="col-auto">
