--- a/src/public/assets/css/index.css
+++ b/src/public/assets/css/index.css
@@ -1,22 +1,170 @@
 
-body {
-    background-color: blue;
-}
-
 html {
-    position: relative;
-    min-height: 100%;
+background-color: #f5f5f5;
+font-size: 16px;
+
 }
  
 
+/**  NAVBAR HEADER */
 
-.navbar.fixed-top.navbar-expand-lg{
-    background-color: #6B77E9;
-    height: 70px;
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    padding-bottom: 150px;
+    /* background-color: #f5f5f5; */
 }
 
 
+.navbar-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /* background: #6772DC; */
+    background: #ffffff;
+    padding: 0px  150px  0px  150px;
+    box-shadow: 0 2px 20px -2px rgba(0,0,0,.2);
+    z-index: 99999999999;
+
+}
+
+.navbar-container a{
+  text-decoration: none;
+
+}
+
+
+.nav-logo {
+    color: #6772DC;
+    display: inline-flex;
+    align-items: center;
+    text-align:center;
+
+}
+
+ul {
+    list-style-type: none;
+}
+
+ul.navbar-list {
+    margin: 0px;
+    padding: 0px;
+    list-style:none;
+    /* color:white; */
+
+    color: black;
+    display: inline-flex;
+
+}
+
+ul.navbar-list a {
+    /* color:white; */
+    color:rgb(58, 58, 58);
+    padding: 1em;
+    display: block;
+    text-align:center;
+    text-decoration: none;
+}
+
+.navbar-list {
+    display: flex; /*1*/
+    flex-direction : row; /*2*/
+    justify-content: center; /*3*/
+}
+
+.navitem:hover {
+    background-color:#c9cdf9;
+}
+
+.navitem:hover a {
+    color:#6772DC;
+}
+
+.sub-items-container:hover > .sub-menu { 
+    display: flex;
+    color:rgb(238, 78, 78);
+
+}
+
+.sub-menu { /*3*/
+display: none;
+flex-flow: column wrap;
+min-width: 100px;
+position: absolute;
+background: white;
+padding: 0;
+}
+
+
+.sub-items-container.sub-menu:hover {
+    background-color:#c9cdf9;
+}
+
+.sub-items-container.sub-menu:hover a {
+    color:#6772DC;
+}
+
+.sub-items-container:hover a:hover {
+    color:#6772DC;
+    background-color:#c9cdf9;
+}
+
+
+
+
+
+
+
+
+/* .sub-menu a { 
+    color:rgb(255, 255, 255);
+}
+
+.btn-login:hover{
+    background-color: aqua;
+}
+
+.btn-signup:hover {
+    background-color: rgb(255, 0, 140);
+}
+
+.btn-logout:hover{
+    background-color: rgb(0, 255, 85);
+} */
+
+/** BODY */
+
+
 .main-container {
-    padding-top: 120px;
-    width: 87%;
+    width: 85%;
+    padding-top: 75px;
+}
+
+div.col-3.m-3.p-3 a {
+    text-decoration: none;
+    color: black;
+}
+
+
+div.goto-admin {
+    background-color: chartreuse;
+    width: 100%;
+    margin-top: 50px;
+}
+
+div.goto-admin button {
+    float: right;
+    border: none;
+    background-color: #6772DC;
+    padding: 1em 2em;
+    border-radius: 16px;
+
+
+}
+
+div.goto-admin button a {
+    color: white;
+    text-decoration: none;
 }
