--- a/src/templates/header_footer/header.html.twig
+++ b/src/templates/header_footer/header.html.twig
@@ -1,22 +1,31 @@
- <nav class="navbar fixed-top navbar-expand-lg" >
-            <div class="container-fluid">
-                <a class="navbar-brand" href="{{ path('app_home') }}">🧺LeBonCoinDuPauvre</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{{ path('app_post_index') }}">Annonces</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_post_new') }}">Ajouter une annonce</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_register') }}">Inscription</a>
-                        </li>
+  <nav class="navbar-container" >
+    <span class="nav-logo">
+            <a class="navbar-brand" href="{{ path('app_home') }}">🧺 
+            LeBonCoinDuPauvre</a>
+    </span>   
+    <ul class="navbar-list">
+       
+        <li class="navitem">
+            <a class="navlink active" aria-current="page" href="{{ path('app_post_index') }}">Annonces</a>
+        </li>
+        <li class="navitem" style="display:{{ app.user ? "inline-flex" : 'none' }}" >
+            <a class="navlink" href="{{ path('app_post_new') }}">Ajouter une annonce</a>
+        </li>
+        <li class="sub-items-container">
+            {% if app.user %}
+            <a href="#">{{ app.user ? app.user.firstname : '' }}</a>
+                    <ul class="sub-menu">
+                        <li><a class="btn-profil" href="{{ path('user_space', {'id': app.user.id}) }}">Espace Personnel</a></li>
+                        <li><a class="btn-logout"  href="{{ path('app_logout') }}">Se déconnecter</a></li>
                     </ul>
-                    <button class="btn btn-outline-success" type="submit">Connexion</button>
-                </div>
-            </div>
-        </nav>
+            {% else %}
+            <a class="btn-login" href="{{ path('app_login') }}">Se connecter</a>
+            {% endif %}
+        </li> 
+        {% if app.user == null %}
+        <li class="navitem">
+            <a class="btn-signup" href="{{ path('app_register') }}">Inscription</a>
+        </li>
+        {% endif %}
+    </ul>
+</nav>
