--- a/src/templates/post/show.html.twig
+++ b/src/templates/post/show.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <h1>Annonce</h1>
+    <h2>Annonce</h2>
 
     <div class="row">
 
@@ -52,32 +52,31 @@
                     
                     <span> {{ post.description }}</span>
 
+                   
+
                 </div>
-        
-        
+
+                <div class="btns-power">
+
+                      {% if userIsAuthor and post.userId.id  is same as(userIsAuthor.id)  %}
+                            <div class="col-auto">
+                                <a href="{{ path('app_post_edit', {'id': post.id}) }}"  class="btn btn-outline-primary">Modifier</a>
+                            </div>
+                            <div class="col-auto">
+                                {{ include('post/_delete_form.html.twig') }}
+                            </div>
+                    {% endif %}
+                </div>
+
             </div>
-    
         </div>
-        
     </div>
 
-    <div class="row justify-content-end mt-3 mb-5">
-        {% if userIsAuthor and post.userId.id  is same as(userIsAuthor.id)  %}
-                <div class="col-auto">
-                    <a href="{{ path('app_post_edit', {'id': post.id}) }}"  class="btn btn-outline-primary">Modifier</a>
-                </div>
-                <div class="col-auto">
-                    {{ include('post/_delete_form.html.twig') }}
-                </div>
-        {% endif %}
-        
-        <div class="row">
-            <div class="col-md-3" id="ajout-commentaire">
-                {{ form(form) }}
-            </div>
-            <div class="col-md-9">
+    <div>
+        <div class="row all-comments-espace">
+            <div class="col-md-9 col card p-3 shadow"  id="comments-area">
                 {% for question in post.questions %}
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" >
                         <div class="card-body">
                             <h5 class="card-title">{{question.userId.firstname}}</h5>
                             <h6 class="card-subtitle mb-2 text-muted">{{ question.date | date("d/m/Y")}}</h6>
@@ -87,8 +86,21 @@
                     </div>
                 {% endfor %}
             </div>
+            <div class="col-md-3 col card p-3 shadow" id="ajout-commentaire">
+
+
+            {{ form_start(form) }}
+                {{ form_row(form.questionText) }}
+                {% if userIsAuthor == null %}
+                {{ form_row(form.submit, { 'disabled': 'true' }) }}
+                {% else %}
+                {{ form_row(form.submit) }}
+                {% endif %}
+            {{ form_end(form) }}
+            </div>
+           
+      
         </div>
-        
     </div>
 
 <script src="{{ asset('assets/js/post.js') }}"></script>
